Finestra profiler pinta, falta posar les marques

--- a/PS4_Project1/Game/Game.vcxproj
+++ b/PS4_Project1/Game/Game.vcxproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Profiler.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
