--- a/PS4_Project1/Game/Game.vcxproj.filters
+++ b/PS4_Project1/Game/Game.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClInclude Include="Common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Profiler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
