--- a/PS4_Project1/Game/Game.vcxproj
+++ b/PS4_Project1/Game/Game.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="Profiler.h" />
     <ClInclude Include="TaskManager.hpp" />
     <ClInclude Include="TaskManager.inl.hpp" />
+    <ClInclude Include="TaskManagerHelpers.hpp" />
     <ClInclude Include="ThreadsafeStructures.hpp" />
   </ItemGroup>
   <ItemGroup>
