--- a/PS4_Project1/Game/Game.vcxproj.filters
+++ b/PS4_Project1/Game/Game.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="ThreadsafeStructures.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TaskManagerHelpers.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
